Fixed some things also on responsiveness

--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-bg-index">
+    <nav class="navbar navbar-expand-lg navbar-bg">
         <div class="container-fluid">
-            <a class="navbar-brand text-light inactive" href="/index.html" title="Go to Elena's Homepage">Elena
+            <a class="navbar-brand active" href="/index.html" title="Go to Elena's Homepage">Elena
                 Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -35,19 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html"
+                        <a class="nav-link inactive" aria-current="page" href="/index.html"
                             title="Back to Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light active" href="/about.html" title="About me">About me</a>
+                        <a class="nav-link active" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/work.html" title="My projects">
+                        <a class="nav-link inactive" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/contact.html" title="Contact me">Contact me</a>
+                        <a class="nav-link inactive" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
