--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-bg">
         <div class="container-fluid">
-            <a class="navbar-brand text-light inactive" href="/index.html" title="Go back to Elena's Homepage">Elena
+            <a class="navbar-brand active" href="/index.html" title="Go back to Elena's Homepage">Elena
                 Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -35,19 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html"
+                        <a class="nav-link inactive" aria-current="page" href="/index.html"
                             title="Back to Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/about.html" title="About me">About me</a>
+                        <a class="nav-link inactive" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/work.html" title="My projects">
+                        <a class="nav-link inactive" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light active" href="/contact.html" title="Contact me">Contact me</a>
+                        <a class="nav-link active" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -56,24 +56,28 @@
 
     <hr>
 
-    <h1 class="text-center mt-5">🤝 Let's get in touch! 🤝</h1>
-    <p class="contact-paragraph mt-5 text-center">Thank you for taking the time to explore my portoflio website.
-        </br>
-        If you
-        like what you see
-        and want to
-        collaborate
-        with me, send me an email:
-    </p>
-    <br>
-    <p class="text-center mb-5"> <a href="mailto:podd.elena@gmail.com" class="contact-email" title="Send me an email">
-            podd.elena@gmail.com </a>
-    </p>
+    <main class="contact-main">
+        <h1 class="text-center contact-title">🤝 Let's get in touch! 🤝</h1>
+        <p class="contact-paragraph mb-0 text-center">Thank you for taking the time to explore my portoflio
+            website.
+            </br>
+            If you
+            like what you see
+            and want to
+            collaborate
+            with me, send me an email:
+        </p>
+        <br>
+        <p class="text-center"> <a href="mailto:podd.elena@gmail.com" class="contact-email" title="Send me an email">
+                📮 podd.elena@gmail.com 📮</a>
+        </p>
 
+    </main>
     <hr>
 
 
-    <footer class="about-footer pt-5 pb-5">
+
+    <footer class="pt-5 pb-5">
         This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
         hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
             title="Netlify page">Netlify</a>.
@@ -91,7 +95,6 @@
             </div>
         </div>
     </footer>
-    <hr>
 
 </body>
 
