--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-bg">
         <div class="container-fluid">
-            <a class="navbar-brand text-light inactive" href="/index.html" title="Elena's Homepage">Elena Poddighe</a>
+            <a class="navbar-brand active" href="/index.html" title="Elena's Homepage">Elena Poddighe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -34,19 +34,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" aria-current="page" href="/index.html"
+                        <a class="nav-link inactive" aria-current="page" href="/index.html"
                             title="Back to Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/about.html" title="About me">About me</a>
+                        <a class="nav-link inactive" href="/about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light active" href="/work.html" title="My projects">
+                        <a class="nav-link active" href="/work.html" title="My projects">
                             My projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light inactive" href="/contact.html" title="Contact me">Contact me</a>
+                        <a class="nav-link inactive" href="/contact.html" title="Contact me">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -56,21 +56,21 @@
     <hr>
 
     <header class="text-center mt-5 mb-5">
-        <h1>My coding journey</h1>
+        <h1 class="work-title">My coding journey 💻</h1>
     </header>
 
     <hr>
 
     <main class="pt-4 work-main pb-5">
 
-        <h3 class="project-title text-center mb-4">The latest & most complex</h3>
+        <h3 class="project-title text-center mb-4">The latest & most complex 🔎</h3>
         <div class="container">
             <div class="row mb-4">
                 <div class="col-md-4">
                     <img src="/images/airecipesgenerator.png" alt="AI recipe generator image"
                         class="img-fluid custom-work-images-first-row rounded" title="AI app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes AI Add-on</em>
-                        workshop</p>
+                        workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/5d654ef6125ffbd0fcfdf4c79305b5dd"
@@ -86,7 +86,7 @@
                     <img src="/images/worldclock.png" alt="World clock app image"
                         class="img-fluid custom-work-images-first-row rounded" title="World clock app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus Add-on</em>
-                        workshop</p>
+                        workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/92a77337759b928d4ffcef544b19912e"
@@ -102,7 +102,7 @@
                     <img src="/images/weather.png" alt="Weather app image"
                         class="img-fluid custom-work-images-first-row rounded" title="Weather app preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus</em>
-                        workshop</p>
+                        workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/4937b894b48f98efc773cc7ac8ae7319"
@@ -118,14 +118,14 @@
 
             <hr class="dotted mb-3">
 
-            <h3 class="project-title text-center mb-4">The first & simpler</h3>
+            <h3 class="project-title text-center mb-4">The first & simpler 🍿</h3>
 
             <div class="row">
                 <div class="col-md-6">
                     <img src="images/theaterproject.png" alt="Theater project image"
                         class="img-fluid custom-work-images-second-row rounded" title="Theater website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics Add-On</em>
-                        workshop</p>
+                        workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/2463a23fa3ebc907152fcaaa5423b5a0"
@@ -141,7 +141,7 @@
                     <img src="images/beerproject.png" alt="Beer project image"
                         class="img-fluid custom-work-images-second-row rounded" title="Beer project website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics</em>
-                        workshop</p>
+                        workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <a href="https://www.shecodes.io/certificates/59b13d08bcfed3d8f962ebd859642a24"
