Added new project section

--- a/index.html
+++ b/index.html
@@ -219,8 +219,41 @@
                 </div>
 
             </div>
+            <div class="row mt-5 pb-3">
+                <div class="col-md-6">
+                    <h3 class="text-center responsive-application">Responsive application</h3>
+                    <p>I coded this webpage for the final exercise of the <a
+                            href="https://www.shecodes.io/cohorts/shecodes-responsive-add-on-8ec00dd7-f99b-447a-a4a5-34ac94a8c998/projects/2010088"
+                            title="Elena's SheCodes Responsive Add-on final project" class="links-to-courses">
+                            <em>SheCodes Responsive Add-on</em></a> course. I have been living in Barcelona for a long
+                        time now, and I thought it would be great to dedicate part of my coding efforts and journey to
+                        this beautiful city. Through this webpage, you can browse a few
+                        of my favourite places, and check some pictures that users post on social media.
+
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js me-5"></i>
+                        <i class="fa-brands fa-bootstrap"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-portfolio-project.netlify.app/" title="Elena's Responsive App"
+                            class="btn responsive-application-button" target="_blank">Check it out</a>
+                    </div>
+                </div>
+                <div class="col d-none d-lg-block"><img src="/images/tourismproject.png" alt="Responsive App Image"
+                        max-width="100%" class="img-fluid rounded world-clock-app-image"
+                        title="World Clock app preview">
+                </div>
+            </div>
         </div>
     </div>
+
+
 
     <footer class="pt-5 pb-5">
         This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
