Added more elements in HTML

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
             </div>
 
             <div class="row mt-5 pb-5">
-                <div class="col d-none d-lg-block"><img src="images/airecipesgenerator.png" alt="Weather App Image"
-                        max-width="100%" class="img-fluid rounded ai-generator-app-image"
-                        title="AI recipe generator app preview">
+                <div class="col d-none d-lg-block"><img src="images/airecipesgenerator.png"
+                        alt="AI recipe generator Image" max-width="100%"
+                        class="img-fluid rounded ai-generator-app-image" title="AI recipe generator app preview">
                 </div>
                 <div class="col-md-6">
                     <h3 class="text-center ai-generator-app">AI Generator App</h3>
@@ -215,10 +215,9 @@
                         <a href="https://elenas-ai-generator.netlify.app/" title="Elena's AI App"
                             class="btn ai-generator-button" target="_blank">Check it out</a>
                     </div>
-
                 </div>
-
             </div>
+
             <div class="row mt-5 pb-3">
                 <div class="col-md-6">
                     <h3 class="text-center responsive-application">Responsive application</h3>
@@ -226,9 +225,9 @@
                             href="https://www.shecodes.io/cohorts/shecodes-responsive-add-on-8ec00dd7-f99b-447a-a4a5-34ac94a8c998/projects/2010088"
                             title="Elena's SheCodes Responsive Add-on final project" class="links-to-courses">
                             <em>SheCodes Responsive Add-on</em></a> course. I have been living in Barcelona for a long
-                        time now, and I thought it would be great to dedicate part of my coding efforts and journey to
-                        this beautiful city. Through this webpage, you can browse a few
-                        of my favourite places, and check some pictures that users post on social media.
+                        time now, so it's been great to dedicate part of my coding efforts and journey to
+                        this beautiful city. You can browse a few of my favourite places, and check some pictures that
+                        users post on SM. 🕍
 
                         </br>
                         This website was built using:
@@ -246,8 +245,71 @@
                     </div>
                 </div>
                 <div class="col d-none d-lg-block"><img src="/images/tourismproject.png" alt="Responsive App Image"
-                        max-width="100%" class="img-fluid rounded world-clock-app-image"
-                        title="World Clock app preview">
+                        max-width="100%" class="img-fluid rounded responsive-app-image" title="Responsive app preview">
+                </div>
+            </div>
+
+            <div class="row mt-5 pb-5">
+                <div class="col d-none d-lg-block"><img src="images/reactweatherproject.png"
+                        alt="React Weather App Image" max-width="100%" class="img-fluid rounded react-weather-app-image"
+                        title="React Weather app preview">
+                </div>
+                <div class="col-md-6">
+                    <h3 class="text-center react-weather-app">React Weather App</h3>
+                    <p>The very first React project and final exercise for the <a
+                            href="https://www.shecodes.io/cohorts/shecodes-react-2ba68f80-be4a-44ed-a09d-f1af29aea429/projects/2025934"
+                            title="Elena's SheCodes React final project" class="links-to-courses">
+                            <em>SheCodes React</em></a> course. This has been probably the most difficult project and
+                        workshop I have worked on, but at the same time one of the most satisfying. React allows you to
+                        break down big problems in smallest (and more manageable) ones...but
+                        expect a good headaches with each solution you find when you are stuck! 🤯
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js me-5"></i>
+                        <i class="fa-brands fa-bootstrap me-5"></i>
+                        <i class="fa-brands fa-node-js me-5"></i>
+                        <i class="fa-brands fa-react"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-awesome-weather-react-app.netlify.app/"
+                            title="Elena's React Weather App" class="btn react-weather-button" target="_blank">Check it
+                            out</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5 pb-3">
+                <div class="col-md-6">
+                    <h3 class="text-center dictionary-application">React Dictionary application</h3>
+                    <p>The very last project for the <a
+                            href="https://www.shecodes.io/cohorts/shecodes-react-add-on-5b7ce246-7c71-4ed1-abda-f83358e27dcd/projects/2027889"
+                            title="Elena's SheCodes React Add-on final project" class="links-to-courses">
+                            <em>SheCodes React Add-on</em></a> course. Discover the magic of words! 😎
+
+                        </br>
+                        This website was built using:
+                        </br>
+                    <div class="text-center">
+                        <i class="fa-brands fa-html5 me-5"></i>
+                        <i class="fa-brands fa-css3-alt me-5"></i>
+                        <i class="fa-brands fa-js me-5"></i>
+                        <i class="fa-brands fa-bootstrap me-5"></i>
+                        <i class="fa-brands fa-node-js me-5"></i>
+                        <i class="fa-brands fa-react"></i>
+                    </div>
+                    </p>
+                    <div class="text-center">
+                        <a href="https://elenas-dictionary-react-app.netlify.app/" title="Elena's React Dictionary App"
+                            class="btn dictionary-button" target="_blank">Check it out</a>
+                    </div>
+                </div>
+                <div class="col d-none d-lg-block"><img src="/images/dictionaryproject.png" alt="Dictionary App Image"
+                        max-width="100%" class="img-fluid rounded dictionary-app-image" title="Dictionary app preview">
                 </div>
             </div>
         </div>
