--- a/work.html
+++ b/work.html
@@ -63,12 +63,70 @@
 
     <main class="pt-4 work-main pb-5">
 
-        <h3 class="project-title text-center mb-4">The latest & most complex 🔎</h3>
+        <h3 class="project-title text-center mb-4">Some React gems 🤓</h3>
         <div class="container">
-            <div class="row mb-4">
-                <div class="col-md-4">
-                    <img src="/images/airecipesgenerator.png" alt="AI recipe generator image"
-                        class="img-fluid custom-work-images-first-row rounded" title="AI app preview">
+
+            <div class="row">
+                <div class="col-md-6 text-center p-0">
+                    <img src="images/dictionaryproject.png" alt="React Dictionary project image"
+                        class="img-fluid custom-work-images-react-row rounded" title="Dictionary website preview">
+                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes React Add-On</em>
+                        workshop 💻</p>
+                    <div class="row text-center">
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/certificates/849f1e67809ff399d47d47fbae73b437"
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/cohorts/shecodes-react-add-on-5b7ce246-7c71-4ed1-abda-f83358e27dcd/projects/2027889"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center p-0">
+                    <img src="images/reactweatherproject.png" alt="React weather project image"
+                        class="img-fluid custom-work-weather-image-react-row rounded"
+                        title="React weather website preview">
+                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes React</em>
+                        workshop 💻</p>
+                    <div class="row text-center">
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/certificates/ae67657015a009ec5b6a0e57488db248"
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/cohorts/shecodes-react-2ba68f80-be4a-44ed-a09d-f1af29aea429/projects/2025934"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="dotted mb-3">
+
+            <h3 class="project-title text-center mb-4">Responsive & AI 📲</h3>
+
+            <div class="row">
+                <div class="col-md-6 text-center p-0">
+                    <img src="images/tourismproject.png" alt="Barcelona project image"
+                        class="img-fluid custom-work-images-react-row rounded" title="Barcelona website preview">
+                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes Responsive Add-On</em>
+                        workshop 💻</p>
+                    <div class="row text-center">
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/certificates/3534c0d6c3adcf39d248dbf14df11171"
+                                target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="https://www.shecodes.io/cohorts/shecodes-responsive-add-on-8ec00dd7-f99b-447a-a4a5-34ac94a8c998/projects/2010088"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <img src="images/airecipesgenerator.png" alt="AI Recipe generator project image"
+                        class="img-fluid custom-work-weather-image-react-row rounded"
+                        title="AI Recipe generator website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes AI Add-on</em>
                         workshop 💻</p>
                     <div class="row text-center">
@@ -77,14 +135,21 @@
                                 target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
-                            <a href="https://elenas-ai-generator.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1" title="Check the project">Project</a>
+                            <a href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-42447aef-f190-42ab-87d2-b8eaa1f6a1f0/projects/1982802"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <img src="/images/worldclock.png" alt="World clock app image"
-                        class="img-fluid custom-work-images-first-row rounded" title="World clock app preview">
+            </div>
+
+            <hr class="dotted mb-3">
+
+            <h3 class="project-title text-center mb-4">JavaScript challenges 🤯</h3>
+
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <img src="images/worldclock.png" alt="World clock app image"
+                        class="img-fluid custom-work-images-javascript-row rounded" title="World clock website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus Add-on</em>
                         workshop 💻</p>
                     <div class="row text-center">
@@ -93,14 +158,14 @@
                                 target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
-                            <a href="https://elenas-world-clock-app.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1" title="Check the project">Project</a>
+                            <a href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-ea8cf9d7-9957-4b7c-968b-d3b3768f1243/projects/1969387"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <img src="/images/weather.png" alt="Weather app image"
-                        class="img-fluid custom-work-images-first-row rounded" title="Weather app preview">
+                <div class="col-md-6 text-center">
+                    <img src="images/weather.png" alt="Weather project image"
+                        class="img-fluid custom-work-images-javascript-row rounded" title="Weather website preview">
                     <p class="mt-2 text-center work-paragraphs"><em>SheCodes Plus</em>
                         workshop 💻</p>
                     <div class="row text-center">
@@ -109,8 +174,8 @@
                                 target="_blank" class="btn work-buttons mt-1" title="See my certificate">Certificate</a>
                         </div>
                         <div class="col-md-6">
-                            <a href="https://elenas-awesome-weather-app.netlify.app/" target="_blank"
-                                class="btn work-buttons mt-1" title="Check my project">Project</a>
+                            <a href="https://www.shecodes.io/cohorts/shecodes-plus-052d8685-ed05-4bb6-a1cd-976b8dd88b9f/projects/1962524"
+                                target="_blank" class="btn work-buttons mt-1" title="Check my project">Project</a>
                         </div>
                     </div>
                 </div>
@@ -121,10 +186,10 @@
             <h3 class="project-title text-center mb-4">The first & simpler 🍿</h3>
 
             <div class="row">
-                <div class="col-md-6">
-                    <img src="images/theaterproject.png" alt="Theater project image"
-                        class="img-fluid custom-work-images-second-row rounded" title="Theater website preview">
-                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics Add-On</em>
+                <div class="col-md-6 text-center">
+                    <img src="images/theaterproject.png" alt="Theater app image"
+                        class="img-fluid custom-work-images-basic-row rounded" title="Theater website preview">
+                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basic Add-on</em>
                         workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
@@ -137,10 +202,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 text-center">
                     <img src="images/beerproject.png" alt="Beer project image"
-                        class="img-fluid custom-work-images-second-row rounded" title="Beer project website preview">
-                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basics</em>
+                        class="img-fluid custom-work-images-basic-row rounded" title="Beer website preview">
+                    <p class="mt-2 text-center work-paragraphs"><em>SheCodes Basic</em>
                         workshop 💻</p>
                     <div class="row text-center">
                         <div class="col-md-6">
@@ -154,6 +219,8 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
     </main>
 
