--- a/contact.html
+++ b/contact.html
@@ -61,23 +61,33 @@
         <p class="contact-paragraph mb-0 text-center">Thank you for taking the time to explore my portoflio
             website.
             </br>
+            </br>
+
+            If you want to learn more about me and my professional journey, check out my <a
+                href="https://www.dropbox.com/scl/fi/as0cumw7y7kvt8d48yriu/CV-EP-2023.pdf?rlkey=sh5dmjkbv2f056jq3pjoltue1&dl=0"
+                target="_blank" class="CV-link">CV</a>.
+            </br>
+            </br>
+
             If you
             like what you see
             and want to
             collaborate
-            with me, send me an email:
+            with me, send me an email @
         </p>
         <br>
-        <p class="text-center"> <a href="mailto:podd.elena@gmail.com" class="contact-email" title="Send me an email">
-                📮 podd.elena@gmail.com 📮</a>
-        </p>
-
+        <div class="email-container">
+            <p class="text-center"> <a href="mailto:podd.elena@gmail.com" class="contact-email"
+                    title="Send me an email">
+                    📮 podd.elena@gmail.com 📮</a>
+            </p>
+        </div>
     </main>
     <hr>
 
 
 
-    <footer class="pt-5 pb-5">
+    <footer class=" pt-5 pb-5">
         This website was coded by Elena Poddighe, it is open-sourced on GitHub and it is
         hosted on <a href="https://elenas-portfolio-project.netlify.app/" target="_blank"
             title="Netlify page">Netlify</a>.
