changed one word

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
             If you want to learn more about me and my professional journey, check out my <a
                 href="https://www.dropbox.com/scl/fi/as0cumw7y7kvt8d48yriu/CV-EP-2023.pdf?rlkey=sh5dmjkbv2f056jq3pjoltue1&dl=0"
-                target="_blank" class="CV-link">CV</a>.
+                target="_blank" class="CV-link">resume</a>.
             </br>
             </br>
 
